<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_extras">Extras</string>
    <string name="action_about">About</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world" translatable="false">Hello World</string>

    <string name="first_string">First String</string>
    <string name="second_string">Second String</string>
    <string name="third_string">Third String</string>
    <string name="fourth_string">Fourth String</string>
    <string name="fifth_string">Fifth String</string>

    <string name="menu_first_item">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>
